--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 html {
     font-size: 100%;
-  }
+}
 
 body {
     background-color: var(--light);
@@ -23,9 +23,6 @@ body {
 }
 
 .card {
-    border: 3px;
-    border-style:solid;
-    border-color:black;
     padding: 10px;
     margin: 10px;
 }
@@ -35,9 +32,76 @@ img {
 }
 
 .card-container {
-    border: 4px;
-    border-style:solid;
-    border-color:blueviolet;
     display: flex;
     flex-wrap: wrap;
+}
+
+.desktop {
+    display: block;
+}
+
+.mobile {
+    display: none;
+}
+
+@media screen and (min-width: 700px) {
+    h1 {
+        font-size: 3.25rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2.75rem;
+    }
+
+    p {
+      font-size: 2.50rem;
+    }
+  }
+
+  @media screen and (min-width: 1000px) {
+    h1 {
+        font-size: 3.50rem;
+    }
+
+    h2 {
+        font-size: 3.25rem;
+    }
+
+    h3 {
+        font-size: 3rem;
+    }
+    
+    p {
+      font-size: 2.75rem;
+    }
+  }
+
+@media screen and (max-width: 600px) {
+
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
+
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: var(--dark);
+        color: var(--light);
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: var(--light);
+        color: var(--dark);
+    }
 }
