--- a/style.css
+++ b/style.css
@@ -12,6 +12,26 @@ html {
 
 body {
     background-color: var(--light);
+    font-family: "Merienda", Handwriting;
+}
+
+.navbar {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    overflow: hidden;
+}
+
+.navbar a {
+    float: left;
+    color: var(--camel);
+    text-align: center;
+    padding: 16px;
+}
+
+.navbar a:hover {
+    background-color: var(--coral);
+    color: black;
 }
 
 .h1 {
@@ -60,6 +80,10 @@ img {
     p {
       font-size: 2.50rem;
     }
+
+    a {
+        font-size: 2.50rem;
+    }
   }
 
   @media screen and (min-width: 1000px) {
@@ -77,6 +101,9 @@ img {
     
     p {
       font-size: 2.75rem;
+    }
+    a {
+        font-size: 2.75rem;
     }
   }
 
@@ -97,11 +124,20 @@ img {
         background-color: var(--dark);
         color: var(--light);
     }
+    a {
+        background-color: darkslateblue;
+        color: darkgray;
+    }
 }
 
 @media (prefers-color-scheme: light) {
     body {
         background-color: var(--light);
         color: var(--dark);
+    }
+
+    a {
+        background-color: darkslategray;
+        color: darkslateblue;
     }
 }
